[gd_scene load_steps=16 format=3 uid="uid://dkivptvx7j8o2"]

[ext_resource type="Script" path="res://Core/Menu.gd" id="1_0cgus"]
[ext_resource type="PackedScene" uid="uid://4p2ruqo7ogn6" path="res://Other/ui_button.tscn" id="1_uyxwi"]
[ext_resource type="Texture2D" uid="uid://c2tyn6ny00aly" path="res://Resources/MenuBackground.jpg" id="2_xuous"]
[ext_resource type="Script" path="res://Core/SettingsWindow.gd" id="3_if3v2"]
[ext_resource type="Texture2D" uid="uid://brwrk5nepjddk" path="res://Resources/Cloud.png" id="3_rt4ue"]
[ext_resource type="Script" path="res://Core/Save Changes.gd" id="6_gqs8y"]
[ext_resource type="Script" path="res://Testing/WindowSize.gd" id="7_4mw87"]
[ext_resource type="Script" path="res://Core/Window Mode.gd" id="7_8qdes"]
[ext_resource type="PackedScene" uid="uid://c008gjlrhusut" path="res://Other/ui_button_setting_window.tscn" id="8_idagc"]
[ext_resource type="PackedScene" uid="uid://cr0unuqth0ehr" path="res://Core/Intro.tscn" id="9_23wyo"]
[ext_resource type="Script" path="res://Core/Language.gd" id="9_suv3k"]

[sub_resource type="Curve" id="Curve_m1loi"]
_data = [Vector2(0.0934066, 0.884211), 0.0, 0.0, 0, 0, Vector2(0.340659, 0.663158), 0.0, 0.0, 0, 0, Vector2(0.582418, 0.484211), 0.0, 0.0, 0, 0, Vector2(0.791209, 0.284211), 0.0, 0.0, 0, 0, Vector2(0.961539, 0.284211), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45anh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.498039, 0.498039, 0.498039, 1)

[sub_resource type="Theme" id="Theme_ps8g1"]
Panel/styles/panel = SubResource("StyleBoxFlat_45anh")

[sub_resource type="Theme" id="Theme_tyx0w"]
Panel/styles/panel = null

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_0cgus")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.215686, 0.87451, 0.74902, 1)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_xuous")
expand_mode = 1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(566, -9)
emitting = false
amount = 500
lifetime = 4.0
emission_shape = 3
emission_rect_extents = Vector2(1920, 1)
spread = 32.28
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_m1loi")
color = Color(1, 1, 1, 0.462745)

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.545098)
position = Vector2(576, -204)
emitting = false
amount = 20
lifetime = 4.0
texture = ExtResource("3_rt4ue")
emission_shape = 3
emission_rect_extents = Vector2(500, 1)
spread = 32.28
gravity = Vector2(10, 450)
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_m1loi")
split_scale = true
scale_curve_x = null
scale_curve_y = null
color = Color(0.819608, 0.968627, 0.972549, 0.454902)

[node name="New Begining" parent="." instance=ExtResource("1_uyxwi")]
offset_left = 461.0
offset_top = 135.0
offset_right = 781.0
offset_bottom = 215.0
focus_neighbor_bottom = NodePath("../Continue")
text = "New Begining"

[node name="Continue" parent="." instance=ExtResource("1_uyxwi")]
offset_left = 470.0
offset_top = 253.0
offset_right = 710.0
offset_bottom = 333.0
focus_neighbor_top = NodePath("../New Begining")
focus_neighbor_bottom = NodePath("../Settings")
text = "Continue"

[node name="Settings" parent="." instance=ExtResource("1_uyxwi")]
offset_left = 466.0
offset_top = 365.0
offset_right = 786.0
offset_bottom = 445.0
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../Exit")
text = "Settings"

[node name="Exit" parent="." instance=ExtResource("1_uyxwi")]
offset_left = 468.0
offset_top = 477.0
offset_right = 788.0
offset_bottom = 557.0
text = "Exit"

[node name="Settings_window" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_if3v2")

[node name="Panel" type="Panel" parent="Settings_window"]
self_modulate = Color(0.0862745, 0.176471, 0.172549, 0.541176)
layout_mode = 0
offset_right = 127.0
offset_bottom = 57.0
theme = SubResource("Theme_ps8g1")

[node name="Save Changes" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 75.0
offset_top = 120.0
offset_right = 466.0
offset_bottom = 120.0
theme = SubResource("Theme_tyx0w")
script = ExtResource("6_gqs8y")

[node name="Button Save" parent="Settings_window/Save Changes" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Save Changes"

[node name="Default Settings" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 78.0
offset_top = 182.0
offset_right = 469.0
offset_bottom = 182.0
theme = SubResource("Theme_tyx0w")

[node name="Button Default Settings" parent="Settings_window/Default Settings" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Default Settings"

[node name="Return" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 77.0
offset_top = 61.0
offset_right = 468.0
offset_bottom = 61.0
theme = SubResource("Theme_tyx0w")

[node name="Button Return" parent="Settings_window/Return" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Return"

[node name="Audio" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 80.0
offset_top = 520.0
offset_right = 471.0
offset_bottom = 520.0
theme = SubResource("Theme_tyx0w")

[node name="Button Audio" parent="Settings_window/Audio" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Audio
"

[node name="Keys" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 84.0
offset_top = 647.0
offset_right = 475.0
offset_bottom = 647.0
theme = SubResource("Theme_tyx0w")

[node name="Button Keys" parent="Settings_window/Keys" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Keys"

[node name="Game Process" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 82.0
offset_top = 584.0
offset_right = 473.0
offset_bottom = 584.0
theme = SubResource("Theme_tyx0w")

[node name="Button Game Process" parent="Settings_window/Game Process" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Process
"

[node name="Window Mode" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 78.0
offset_top = 455.0
offset_right = 469.0
offset_bottom = 455.0
theme = SubResource("Theme_tyx0w")
script = ExtResource("7_8qdes")

[node name="Button Mode" parent="Settings_window/Window Mode" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Window Mode
"

[node name="Panel" type="Panel" parent="Settings_window/Window Mode"]
visible = false
self_modulate = Color(0, 0.858824, 0.866667, 1)
layout_mode = 0
offset_left = 350.0
offset_right = 661.0
offset_bottom = 115.0
theme = SubResource("Theme_tyx0w")

[node name="Label5" type="VBoxContainer" parent="Settings_window/Window Mode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -52.5
offset_right = 150.5
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="fullscreen" parent="Settings_window/Window Mode/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "Fullscreen"

[node name="windowed" parent="Settings_window/Window Mode/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "Windowed
"

[node name="WindowSize" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 77.0
offset_top = 327.0
offset_right = 468.0
offset_bottom = 327.0
theme = SubResource("Theme_tyx0w")
script = ExtResource("7_4mw87")

[node name="Panel" type="Panel" parent="Settings_window/WindowSize"]
visible = false
self_modulate = Color(0, 0.858824, 0.866667, 1)
layout_mode = 0
offset_left = 350.0
offset_right = 661.0
offset_bottom = 224.0
theme = SubResource("Theme_tyx0w")

[node name="Label5" type="VBoxContainer" parent="Settings_window/WindowSize/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -66.0
offset_right = 100.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="ui_button5" parent="Settings_window/WindowSize/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "1920x1080"

[node name="ui_button2" parent="Settings_window/WindowSize/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "1600x900"

[node name="ui_button3" parent="Settings_window/WindowSize/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "1440x870"

[node name="ui_button4" parent="Settings_window/WindowSize/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "1280x840"

[node name="ui_button" parent="Settings_window/WindowSize" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Window Size"

[node name="Language" type="Panel" parent="Settings_window"]
layout_mode = 2
offset_left = 77.0
offset_top = 391.0
offset_right = 468.0
offset_bottom = 391.0
theme = SubResource("Theme_tyx0w")
script = ExtResource("9_suv3k")

[node name="Panel" type="Panel" parent="Settings_window/Language"]
visible = false
self_modulate = Color(0, 0.858824, 0.866667, 1)
layout_mode = 0
offset_left = 350.0
offset_right = 661.0
offset_bottom = 115.0
theme = SubResource("Theme_tyx0w")

[node name="Label5" type="VBoxContainer" parent="Settings_window/Language/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -52.5
offset_right = 150.5
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="ru" parent="Settings_window/Language/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "Russia"

[node name="en" parent="Settings_window/Language/Panel/Label5" instance=ExtResource("8_idagc")]
layout_mode = 2
text = "English"

[node name="Button Language" parent="Settings_window/Language" instance=ExtResource("8_idagc")]
layout_mode = 2
offset_left = 5.5
offset_top = 5.0
offset_right = 305.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Language"

[node name="Intro" parent="." instance=ExtResource("9_23wyo")]

[connection signal="pressed" from="New Begining" to="." method="_on_new_begining_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings_window/Save Changes/Button Save" to="Settings_window/Save Changes" method="_on_button_save_pressed"]
[connection signal="pressed" from="Settings_window/Return/Button Return" to="Settings_window" method="_on_button_return_pressed"]
[connection signal="pressed" from="Settings_window/Window Mode/Button Mode" to="Settings_window/Window Mode" method="_on_button_mode_pressed"]
[connection signal="pressed" from="Settings_window/Window Mode/Panel/Label5/fullscreen" to="Settings_window/Window Mode" method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Settings_window/Window Mode/Panel/Label5/windowed" to="Settings_window/Window Mode" method="_on_windowed_pressed"]
[connection signal="pressed" from="Settings_window/WindowSize/Panel/Label5/ui_button5" to="Settings_window/WindowSize" method="_on_ui_button_5_pressed"]
[connection signal="pressed" from="Settings_window/WindowSize/Panel/Label5/ui_button2" to="Settings_window/WindowSize" method="_on_ui_button_2_pressed"]
[connection signal="pressed" from="Settings_window/WindowSize/Panel/Label5/ui_button3" to="Settings_window/WindowSize" method="_on_ui_button_3_pressed"]
[connection signal="pressed" from="Settings_window/WindowSize/Panel/Label5/ui_button4" to="Settings_window/WindowSize" method="_on_ui_button_4_pressed"]
[connection signal="pressed" from="Settings_window/WindowSize/ui_button" to="Settings_window/WindowSize" method="_on_ui_button_pressed"]
[connection signal="pressed" from="Settings_window/Language/Panel/Label5/ru" to="Settings_window/Language" method="_on_ru_pressed"]
[connection signal="pressed" from="Settings_window/Language/Panel/Label5/en" to="Settings_window/Language" method="_on_en_pressed"]
[connection signal="pressed" from="Settings_window/Language/Button Language" to="Settings_window/Language" method="_on_button_language_pressed"]
